--- a/stockroomapp/completed/index.html
+++ b/stockroomapp/completed/index.html
@@ -26,7 +26,12 @@
                 <div class="row about-text-headline">
                     <br />Stock Room App
                 </div>
-                <div class="row about-text">
+                <div class="row">
+                    <div class="text-center">
+                        <img src="icon.png" width="20%" />
+                    </div>
+                </div>
+               <div class="row about-text">
                     <br />Thank you for your Donation!
                     <br />Your support will make it possible for us to continue creating a modern App like StockRoom.
                     <br />Thank you once again for your contribution.
