--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -4,7 +4,7 @@
 <body>
     <style>
         body {
-            background-color: #27AAE1;
+            background-color: #33B5E5;
             color: white;
         }
 
@@ -55,7 +55,9 @@
     <div class="tables">
         <table class="stock_table border">
             <tr>
-                <th colspan="5" align="left" class="table_name">stock_table</th>
+                <th colspan="5" align="left" class="table_name">
+                    <!-- stock_table_name -->
+                </th>
             </tr>
             <tr>
                 <th>symbol</th>
@@ -71,7 +73,9 @@
 
         <table class="group_table border">
             <tr>
-                <th colspan="5" align="left" class="table_name">group_table</th>
+                <th colspan="2" align="left" class="table_name">
+                    <!-- group_table_name -->
+                </th>
             </tr>
             <tr>
                 <th>color</th>
@@ -84,7 +88,9 @@
 
         <table class="asset_table border">
             <tr>
-                <th colspan="5" align="left" class="table_name">asset_table</th>
+                <th colspan="4" align="left" class="table_name">
+                    <!-- asset_table_name -->
+                </th>
             </tr>
             <tr>
                 <th>id</th>
@@ -99,7 +105,9 @@
 
         <table class="event_table border">
             <tr>
-                <th colspan="5" align="left" class="table_name">event_table</th>
+                <th colspan="6" align="left" class="table_name">
+                    <!-- event_table_name -->
+                </th>
             </tr>
             <tr>
                 <th>id</th>
