--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -57,12 +57,14 @@
     <div class="tables">
         <table class="stock_table border">
             <tr>
-                <th colspan="5" align="left" class="table_name">
+                <th colspan="7" align="left" class="table_name">
                     <!-- stock_table_name -->
                 </th>
             </tr>
             <tr>
                 <th>symbol</th>
+                <th>portfolio</th>
+                <th>data</th>
                 <th>groupColor</th>
                 <th>notes</th>
                 <th>alertAbove</th>
