--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -41,7 +41,8 @@
         .stock_table,
         .group_table,
         .asset_table,
-        .event_table {
+        .event_table,
+        .dividend_table {
             background-color: #F0F0FF;
             color: black;
         }
@@ -122,6 +123,25 @@
                 <th>datetime</th>
             </tr>
             <!-- event_table -->
+        </table>
+
+        <br />
+
+        <table class="dividend_table border">
+            <tr>
+                <th colspan="6" align="left" class="table_name">
+                    <!-- dividend_table_name -->
+                </th>
+            </tr>
+            <tr>
+                <th>id</th>
+                <th>symbol</th>
+                <th>amount</th>
+                <th>type</th>
+                <th>exdate</th>
+                <th>paydate</th>
+            </tr>
+            <!-- dividend_table -->
         </table>
     </div>
 
