--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -129,7 +129,7 @@
 
         <table class="dividend_table border">
             <tr>
-                <th colspan="6" align="left" class="table_name">
+                <th colspan="7" align="left" class="table_name">
                     <!-- dividend_table_name -->
                 </th>
             </tr>
@@ -138,6 +138,7 @@
                 <th>symbol</th>
                 <th>amount</th>
                 <th>type</th>
+                <th>cycle</th>
                 <th>exdate</th>
                 <th>paydate</th>
             </tr>
