--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -58,7 +58,7 @@
     <div class="tables">
         <table class="stock_table border">
             <tr>
-                <th colspan="7" align="left" class="table_name">
+                <th colspan="8" align="left" class="table_name">
                     <!-- stock_table_name -->
                 </th>
             </tr>
@@ -68,6 +68,7 @@
                 <th>data</th>
                 <th>groupColor</th>
                 <th>notes</th>
+                <th>dividendNotes</th>
                 <th>alertAbove</th>
                 <th>alertBelow</th>
             </tr>
@@ -93,7 +94,7 @@
 
         <table class="asset_table border">
             <tr>
-                <th colspan="4" align="left" class="table_name">
+                <th colspan="5" align="left" class="table_name">
                     <!-- asset_table_name -->
                 </th>
             </tr>
@@ -102,6 +103,7 @@
                 <th>symbol</th>
                 <th>shares</th>
                 <th>price</th>
+                <th>date</th>
             </tr>
             <!-- asset_table -->
         </table>
@@ -139,8 +141,8 @@
                 <th>amount</th>
                 <th>type</th>
                 <th>cycle</th>
-                <th>exdate</th>
                 <th>paydate</th>
+                <th>exdate</th>
             </tr>
             <!-- dividend_table -->
         </table>
