update db schema

--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -125,7 +125,7 @@
 
         <table class="asset_table border">
             <tr>
-                <th colspan="5" align="left" class="asset_table table_name">
+                <th colspan="9" align="left" class="asset_table table_name">
                     <!-- asset_table_name -->
                 </th>
             </tr>
@@ -134,7 +134,11 @@
                 <th>symbol</th>
                 <th>shares</th>
                 <th>price</th>
-                <th>date</th>
+                <th>note</th>
+                <th>buyDate</th>
+                <th>sellDate</th>
+                <th>commissionRel</th>
+                <th>commissionAbs</th>
             </tr>
             <!-- asset_table -->
         </table>
@@ -162,7 +166,7 @@
 
         <table class="dividend_table border">
             <tr>
-                <th colspan="7" align="left" class="dividend_table table_name">
+                <th colspan="8" align="left" class="dividend_table table_name">
                     <!-- dividend_table_name -->
                 </th>
             </tr>
@@ -174,6 +178,7 @@
                 <th>cycle</th>
                 <th>paydate</th>
                 <th>exdate</th>
+                <th>note</th>
             </tr>
             <!-- dividend_table -->
         </table>
