--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -125,7 +125,7 @@
 
         <table class="asset_table border">
             <tr>
-                <th colspan="9" align="left" class="asset_table table_name">
+                <th colspan="8" align="left" class="asset_table table_name">
                     <!-- asset_table_name -->
                 </th>
             </tr>
@@ -134,11 +134,10 @@
                 <th>symbol</th>
                 <th>shares</th>
                 <th>price</th>
+                <th>type</th>
                 <th>note</th>
-                <th>buyDate</th>
-                <th>sellDate</th>
-                <th>commissionRel</th>
-                <th>commissionAbs</th>
+                <th>date</th>
+                <th>commission</th>
             </tr>
             <!-- asset_table -->
         </table>
