--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -125,18 +125,20 @@
 
         <table class="asset_table border">
             <tr>
-                <th colspan="8" align="left" class="asset_table table_name">
+                <th colspan="10" align="left" class="asset_table table_name">
                     <!-- asset_table_name -->
                 </th>
             </tr>
             <tr>
                 <th>id</th>
                 <th>symbol</th>
-                <th>shares</th>
+                <th>amount</th>
                 <th>price</th>
                 <th>type</th>
                 <th>note</th>
                 <th>date</th>
+                <th>sharesPerAmount</th>
+                <th>expirationDate</th>
                 <th>commission</th>
             </tr>
             <!-- asset_table -->
