--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -137,7 +137,7 @@
                 <th>type</th>
                 <th>note</th>
                 <th>date</th>
-                <th>sharesPerAmount</th>
+                <th>sharesPerQuantity</th>
                 <th>expirationDate</th>
                 <th>premium</th>
                 <th>commission</th>
