changed notes to note

--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -86,8 +86,8 @@
                 <th>portfolio</th>
                 <th>data</th>
                 <th>groupColor</th>
-                <th>notes</th>
-                <th>dividendNotes</th>
+                <th>note</th>
+                <th>dividendNote</th>
                 <th>alertAbove</th>
                 <th>alertBelow</th>
             </tr>
@@ -98,8 +98,8 @@
                 <td>portfolio</td>
                 <td>data</td>
                 <td>groupColor</td>
-                <td>notes</td>
-                <td>dividendNotes</td>
+                <td>note</td>
+                <td>dividendNote</td>
                 <td>alertAbove</td>
                 <td>alertBelow</td>
             </tr>
