--- a/app/src/main/res/raw/list.html
+++ b/app/src/main/res/raw/list.html
@@ -140,7 +140,7 @@
                 <th>sharesPerQuantity</th>
                 <th>expirationDate</th>
                 <th>premium</th>
-                <th>commission</th>
+                <th>fee</th>
             </tr>
             <!-- asset_table -->
         </table>
